...
    <!--7-Cadenas de los elementos de la actividad elegir claves-->
    <string name="seleccionar_generos">Los siguientes géneros se encuentran en la clave dicotómica. Seleccione los géneros sobre los que aplicar la clave dicotómica:</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="boton_clave">Ir clave dicotómica</string>

    <!--8-Cadenas de los elementos de la actividad MostrarComparativa -->
    <string name="texto_comparativa">Comparativa entre las imágenes:</string>

    <!-- Elementos del menú -->
    <string name="titulo_menu_1">Herramientas</string>
    <string name="home">Home</string>
    <string name="clasificar">Clasificar</string>
    <string name="claves">Ir claves dicotómicas</string>
    <string name="informacion">Información setas</string>
    <string name="titulo_menu_2">Opciones</string>
    <string name="idioma">Cambiar idioma</string>
    <string name="ayuda_menu">Ayuda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Ayuda</string>

    <!--0-Cadenas de los elementos de la ayuda de lanzadora-->
    <string name="ayuda_lanzadora_0">Ayuda de la actividad principal:</string>
    <string name="ayuda_lanzadora_1">Para clasificar una foto pulse sobre el icono de la lupa.</string>
    <string name="ayuda_lanzadora_2">Para mostrar un listado de las setas disponibles pulse el icono de información.</string>
    <string name="ayuda_lanzadora_3">Para mostrar un listado de las claves dicotómicas disponibles pulse el siguiente botón.</string>
    <string name="ayuda_lanzadora_4">Para mostrar el menú de la aplicación pulse el siguiente botón.</string>

    <!--1-Cadenas de los elementos de la ayuda de recoger foto-->
    <string name="ayuda_recoger_0">Ayuda de la actividad recoger foto:</string>
    <string name="ayuda_recoger_1">Para cargar una foto desde la galería pulse el siguiente botón.</string>
    <string name="ayuda_recoger_2">Para cargar una foto desde la cámara del móvil pulse el siguiente botón.</string>
    <string name="ayuda_recoger_3">Para clasificar la foto pulse el siguiente botón (sólo aparece cuando se ha cargado una foto).</string>
...
    <string name="ayuda_elegir_clave_2">Para seleccionar los géneros pulse el siguiente botón.</string>
    <string name="ayuda_elegir_clave_3">Para ir a la clave general pulse el siguiente botón (Sólo aparecerán cuando se seleccionen los géneros deseados).</string>
    <string name="ayuda_elegir_clave_4">Para mostrar el menú de la aplicación pulse el siguiente botón.</string>

    <!--8-Cadenas de los elementos de la ayuda de mostrar comparativa-->

    <string name="ayuda_mostrar_comparativa_0">Ayuda de la actividad mostrar comparativa:</string>
    <string name="ayuda_mostrar_comparativa_1">La página muestra una comparativa en entre la foto introducida y la foto de la especie seleccionada,
        para ampliar las imágenes pulsar sobre su foto."</string>
    <string name="ayuda_mostrar_comparativa_2">Para mostrar el menú de la aplicación pulse el siguiente botón.</string>

    <!--9-Cadenas de los elementos de la ayuda del menú lateral-->
    <string name="ayuda_menu_0">Ayuda del menú:</string>
...
