<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ubusetas.ubu.adrian.proyectoubusetas.resultados.MostrarComparativa"
    tools:showIn="@layout/layout_mostrar_comparativa">

    <TextView
        android:id="@+id/TextView_Comparativa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/texto_comparativa"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="150dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ImageView_Comparativa_1"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/ImageView_Comparativa_2"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>
</RelativeLayout>